# template_app

./: CMakeLists.txt  main.cpp
cmake/: deps.cmake
include/KELBON_TEMPLATE_PROJECT_NAME/: program_options.def
